update takeback and add more options in options popup